app/javascript/stylesheets/application.scss
@import 'overrides.scss';
@import './node_modules/bulma/bulma.sass';

.navbar {
	.signup-button {
		background-color: $flame-pea;
		border: none;
		color: $alabaster;
	}
	
	.login-button {
		background-color: $alabaster;
		color: $info;
	}
}

a {
	color: $flame-pea;
}

.container {
	align-items: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	width: 100vw;
	
	.hero {

		.hero-body {
			background: center / contain no-repeat  url("../images/Orange-Typewriter.png");
			
			h1 {
				font-size: 4rem;
			}
	
			h2 { 
				font-size: 3rem;	
			}
		}
	}

	.with-pagination {
		margin: 5vh auto;
	}

	.section {
		display: flex;
		flex-direction: column;
		justify-content: center;

		.flickr_pagination {
			text-align: center;
			padding: 0.3em;
			cursor: default;

			a, span, em {
				border-radius: 5px;
				padding: 0.2em 0.5em;
			}

			.disabled {
				color: $text;
			}

			.current {
				font-style: normal;
				font-weight: bold;
				color: $flame-pea;
			}

			a {
				border: 1px solid $text;
				color: $info;
				text-decoration: none;

				&:hover, &:focus {
					border-color: #003366;
					background: $info;
					color: white;
				}
			}
			
			.page_info {
				color: #aaaaaa;
				padding-top: 0.8em;
			}

			.previous_page, .next_page {
				border-width: 2px;
			}
			.previous_page {
				margin-right: 1em;
			}

			.next_page {
				margin-left: 1em;
			}
		}
		
		.column.is-one-third {
			min-width: 400px;
		}

		.card-header {
			align-items: center;
			display: flex;
			flex-direction: column;
			justify-content: center;
			padding-bottom: 1.5vh;
		}
	}
}

@media screen and (max-width: 769px) {
	.column.is-one-third {
		min-width: 0;
	}
}

